components/GuildList.module.css
@keyframes skeleton-shimmer {
  0% {
    background-position-x: 200%;
  }
  100% {
    background-position-x: 0%;
  }
}

.guildList {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 10px;
    margin: 0;
    flex-wrap: wrap;
    max-width: 100dvw;

    .guild {
        background-color: rgba(255, 255, 255, 0.157);
        border: 1px solid rgba(255, 255, 255, 0.191);
        border-radius: 12px;
        padding: 10px;
        display: flex;
        backdrop-filter: blur(5px);
        gap: 10px;
        transition: 0.2s ease-in-out;
        -webkit-user-drag: none;

        .guildIcon {
            background-color: #eeeeee51;
            width: 32px;
            height: 32px;
            border-radius: 4px;
            -webkit-user-drag: none;
            aspect-ratio: 1 / 1;
        }

        .placeholder {
            background-attachment: fixed;
            --default-color: #e8e8e82e;
            --shimmer-color: #ffffff55;
            animation: skeleton-shimmer 2s ease-out infinite;
            background: linear-gradient(
                100deg,
                var(--default-color),
                var(--default-color) 50%,
                var(--shimmer-color) 60%,
                var(--default-color) 70%
            );
            background-size: 200% 100%;
        }

        .guildInfo {
            display: flex;
            flex-direction: column;
            width: stretch;
            gap: 4px;

            .placeholder {
                min-width: 100%;
                min-height: 16px;
                border-radius: 999px;
            }
        }
    }

    .disabled {
        opacity: 50%;
    }

    .guild:hover {
        background-color: rgba(255, 255, 255, 0.275);
        scale: 1.04;
    }
    .guild:active {
        filter: brightness(150%);
    }
}

